STOCH: finished chapter 1 and 2

--- a/Math-Ba-STOCH/STOCH_Vorlesung/stoch_1_1_wahrscheinlichkeitsraeume.tex
+++ b/Math-Ba-STOCH/STOCH_Vorlesung/stoch_1_1_wahrscheinlichkeitsraeume.tex
@@ -125,10 +125,10 @@ Aus der Definition folgen direkt die folgenden Eigenschaften:
 
 \begin{*bemerkung}
     \begin{itemize}[leftmargin=*, nolistsep]
-        \item Die eineindeutige Beziehung zwischen Dichte und WMaß überträgt sich nicht auf den stetigen Fall.
+        \item Die eineindeutige Beziehung zwischen Dichte und \WMass überträgt sich nicht auf den stetigen Fall.
         \begin{itemize}[nolistsep]
-            \item Nicht jedes WMaß auf $(\Omega, \borel{\Omega}), \Omega \subset \Rn$ besitzt eine Dichte.
-            \item Zwei Dichtefunktionen definieren dasselbe WMaß, wenn sie sich nur auf einer Menge von Lebesgue-Maß $0$ unterscheiden.
+            \item Nicht jedes \WMass auf $(\Omega, \borel{\Omega}), \Omega \subset \Rn$ besitzt eine Dichte.
+            \item Zwei Dichtefunktionen definieren dasselbe \WMass, wenn sie sich nur auf einer Menge von Lebesgue-Maß $0$ unterscheiden.
         \end{itemize}
         \item Jede auf $\Omega \subset \Rn$ definierte Dichtefunktion $\rho$ lässt sich auf ganz $\Rn$ fortsetzen durch $\rho(x) = 0, x \notin \Omega$. Das erzeugte WMaß auf $(\Rn, \borel{\Rn})$ lässt mit den WMaß auf $(\Omega, \borel{\Omega})$ identifizieren.
         \item Mittels Dirac-Maß $\delta_{x}$ können auch jedes diskrete WMaß auf $\Omega \subset \Rn$ als WMaß auf $\Rn, \borel{\Rn}$ interpretieren:
@@ -145,7 +145,7 @@ Aus der Definition folgen direkt die folgenden Eigenschaften:
 
 Abschließend erinnern wir uns an:
 
-\begin{satz}[Eindeutigkeitssatz für WMaße] \label{satz: 1.9_eindeutigkeitssatz}
+\begin{satz}[Eindeutigkeitssatz für Wahrscheinlichkeitsmaße] \label{satz: 1.9_eindeutigkeitssatz}
     Sei $(\Omega, \ereignisF)$ Ereignisraum und $\P$ ein WMaß auf $(\Omega, \ereignisF)$. 
     Sei $\ereignisF = \omega(\mathcal{G})$ für ein $\cap$-stabiles Erzeugendensystem $\mathcal{G} \subset \pows{\Omega}$. 
     Dann ist $\P$ bereits durch seine Einschränkung $\P |_{\mathcal{G}}$ eindeutig bestimmt.
