--- a/texmf/tex/latex/mathworkMathTUD/mathworkMathTUD.sty
+++ b/texmf/tex/latex/mathworkMathTUD/mathworkMathTUD.sty
@@ -382,6 +382,8 @@ nobreak,%
 \newcommand*{\mit}{\text{ mit }}
 \newcommand*{\und}{\text{ und }}
 
+\newcommand{\brackets}[1]{\left( #1 \right)}
+
 % >> sets and mappings
 \newcommand{\menge}[1]{\left\{ #1 \right\}}
 \newcommand{\set}[1]{\left\{ #1 \right\}}
@@ -514,7 +516,9 @@ nobreak,%
 \DeclareMathOperator{\Abb}{Abb} % Abbildung
 
 %%%%%% B
+\DeclareMathOperator{\Bernoulli}{Bernoulli} % bernoulli distribution
 \DeclareMathOperator{\Bil}{Bil}
+\DeclareMathOperator{\Bin}{Bin} % binomial distribution
 
 %%%%%% C
 \DeclareMathOperator{\charak}{char}
@@ -547,6 +551,7 @@ nobreak,%
 %%%%%% H
 \DeclareMathOperator{\Hom}{Hom} % family of Homomorphisms
 \DeclareMathOperator{\Hau}{Hau} % Hauptraum (generalized Eigenspace)
+\DeclareMathOperator{\Hyper}{Hyper} % hypergeometric distribution
 
 %%%%%% IJK
 \DeclareMathOperator{\Image}{Im} % Image
@@ -564,6 +569,7 @@ nobreak,%
 
 \DeclareMathOperator{\Mat}{Mat} % Matrix
 \DeclareMathOperator{\Minpol}{MinPol} % Minimalpolynon
+\DeclareMathOperator{\Multi}{Multi}
 \DeclareMathOperator{\normalenraum}{N} % Normalenraum
 \DeclareMathOperator{\normalisator}{N} % Mormalisator
 
@@ -573,6 +579,7 @@ nobreak,%
 \DeclareMathOperator{\Orth}{O} % Orthogonal Group
 \DeclareMathOperator{\Out}{Out} % Outer Automorphism
 
+\DeclareMathOperator{\Poisson}{Poisson} % poisson distribution
 \DeclareMathOperator{\pr}{pr} % Projection
 
 \DeclareMathOperator{\Quot}{Quot} % Quotient
