STOCH: update homework

--- a/Math-Ba-STOCH/STOCH_Hausaufgaben/stoch_hausaufgaben_main.tex
+++ b/Math-Ba-STOCH/STOCH_Hausaufgaben/stoch_hausaufgaben_main.tex
@@ -104,6 +104,7 @@
 \include{stoch_hausaufgaben_5}
 \include{stoch_hausaufgaben_6}
 \include{stoch_hausaufgaben_7}
+\include{stoch_hausaufgaben_8}
 
 
 \end{document}
