--- a/Math-Ba-STOCH/STOCH_Vorlesung/stoch_3_1_bedingte_wahrscheinlichkeiten.tex
+++ b/Math-Ba-STOCH/STOCH_Vorlesung/stoch_3_1_bedingte_wahrscheinlichkeiten.tex
@@ -80,7 +80,7 @@ Aus \cref{def: 3_1_3_bedingteWahrscheinlichkeit} ergibt sich das folgende Lemma.
 	\end{equation*}
 \end{proof}
 
-Stehen die $A_i$ in \cref{lemma: 3_1_4_multiplikationsformel} in einer (zeitlichen) Abfolge, so liefert Formel einen Hinweis wie Wahrscheinlichkeitsmaße für \begriff{Stufenexperimente} konstruiert werden können. Ein \emph{Stufenexperiment} aus $n$ nacheinander ausgeführten Teilexperimenten lässt sich als \begriff{Baumdiagramm} darstellen.
+Stehen die $A_i$ in \cref{lemma: 3_1_4_multiplikationsformel} in einer (zeitlichen) Abfolge, so liefert Formel einen Hinweis wie Wahrscheinlichkeitsmaße für \begriff{Stufenexperimente} konstruiert werden können. Ein Stufenexperiment aus $n$ nacheinander ausgeführten Teilexperimenten lässt sich als \begriff{Baumdiagramm} darstellen.
 
 \begin{center}
 	\includegraphics{./stoch_abbildungen/baum_1.pdf}
